.circleci/config.ymlにServerspec実行を定義する

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,6 +169,6 @@ workflows:
       - execute-ansible:
           requires:
               - set-env-vars
-      # - execute-serverspec:
-      #     requires:
-      #         - execute-ansible
+      - execute-serverspec:
+          requires:
+              - execute-ansible
