--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,20 +45,6 @@ jobs:
           root: .
           paths:
             - bash.env
-  execute-cloudformation:
-    executor: node
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: |
-          cat bash.env >> $BASH_ENV
-      - aws-cli/install
-      - run:
-          name: deploy CloudFormation
-          command: |
-            set -x
-            aws cloudformation deploy --template-file CFn-S3-for-tfstate.yml --stack-name Circleci-s3-for-tfstate
   execute-terraform:
     executor: terraform
     steps:
@@ -74,6 +60,11 @@ jobs:
       - terraform/apply:
           path: terraform
           var: 'pgp_key=${GPG_KEY}'
+      - run:
+          name: move local .tfstate to s3
+          command: sed -i 's/\#\ //g' terraform/provider.tf
+      - terraform/init:
+          path: terraform
   set-env-vars:
     executor: ubuntu
     steps:
@@ -174,12 +165,9 @@ workflows:
     jobs:
       - assume-role:
           context: aws
-      - execute-cloudformation:
-          requires:
-            - assume-role
       - execute-terraform:
           requires:
-            - execute-cloudformation
+            - assume-role
       - set-env-vars:
           requires:
               - execute-terraform
